# mcp-mux

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_LICENSES  branding.toml  clean-appdata.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  release-plz.toml  rustfmt.toml  server.json  test-output.txt
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  macos_dock.rs  macos_permissions.rs  main.rs  main_window.rs  tray.rs
crates/mcpmux-core/: Cargo.toml  build.rs
crates/mcpmux-core/src/: branding.rs  event_bus.rs  lib.rs
crates/mcpmux-core/src/application/: client.rs  mod.rs  permission.rs  server.rs  space.rs  user_space_sync.rs
crates/mcpmux-core/src/domain/: builtin.rs  client.rs  config.rs  credential.rs  event.rs  feature_set.rs  installed_server.rs  machine.rs  mod.rs  outbound_oauth_registration.rs  server.rs  server_feature.rs  server_log.rs  space.rs  workspace_appearance.rs  workspace_binding.rs
crates/mcpmux-core/src/registry/: default-registry.json  mod.rs  schema.rs  types.rs  validation.rs
crates/mcpmux-core/src/repository/: mod.rs
crates/mcpmux-core/src/service/: app_settings_service.rs  cimd_fetcher.rs  client_install.rs  client_service.rs  config_export.rs  gateway_port_service.rs  mod.rs  permission_service.rs  registry_api_client.rs  server_discovery.rs  server_log_manager.rs  space_service.rs
crates/mcpmux-gateway/: ARCHITECTURE.md  Cargo.toml  DI_PATTERN.md
crates/mcpmux-gateway/src/: lib.rs  public_base_url.rs
crates/mcpmux-gateway/src/admin/: bridge_context.rs  config.rs  event_hub.rs  live_runtime.rs  mod.rs  router.rs  runtime.rs  server.rs  ui_events.rs  write_runtime.rs
crates/mcpmux-gateway/src/auth/: mod.rs
crates/mcpmux-gateway/src/consumers/: mcp_notifier.rs  mod.rs  oauth_handler.rs  server_config_handler.rs
crates/mcpmux-gateway/src/logging/: mod.rs  trace_context.rs
crates/mcpmux-gateway/src/mcp/: context.rs  handler.rs  mod.rs  oauth_middleware.rs
crates/mcpmux-gateway/src/oauth/: dcr.rs  discovery.rs  flow.rs  inbound_consent.rs  mod.rs  pkce.rs  token.rs
crates/mcpmux-gateway/src/permissions/: mod.rs
crates/mcpmux-gateway/src/pool/: connection.rs  context.rs  credential_store.rs  instance.rs  mod.rs  oauth.rs  oauth_utils.rs  routing.rs  server_manager.rs  service.rs  service_factory.rs  token.rs
crates/mcpmux-gateway/src/server/: admin_console.html  dependencies.rs  handlers.rs  logging_middleware.rs  management.rs  management_rpc.rs  mod.rs  pair_page.html  pairing.rs  rate_limit.rs  service_container.rs  startup.rs  state.rs
crates/mcpmux-gateway/src/services/: authorization.rs  client_metadata_service.rs  discovery_rank.rs  embedding.rs  embedding_warmer.rs  event_emitter.rs  feature_set_resolver.rs  grant_service.rs  mod.rs  notification_emitter.rs  package_version.rs  prefix_cache.rs  prompt_discovery.rs  resource_discovery.rs  server_version_probe.rs  session_overrides.rs  session_roots.rs  space_resolver.rs  tool_discovery.rs  tool_discovery_index.rs  tool_discovery_search.rs  tool_discovery_tests.rs  tool_discovery_types.rs
crates/mcpmux-mcp/: Cargo.toml
crates/mcpmux-mcp/src/: client_pool.rs  lib.rs  transports.rs
crates/mcpmux-serve/: Caddyfile  Cargo.toml  Dockerfile  docker-compose.yml
crates/mcpmux-serve/src/: config.rs  main.rs  webui.rs
crates/mcpmux-storage/: Cargo.toml
crates/mcpmux-storage/src/: crypto.rs  database.rs  key_migration.rs  keychain.rs  keychain_dpapi.rs  keychain_file.rs  lib.rs  migrations.rs
crates/mcpmux-storage/src/migrations/: 001_initial.sql  002_add_client_approved.sql  002_featureset_resolver.sql  003_app_settings.sql  003_drop_legacy_grants.sql  004_add_installation_source.sql  004_workspace_modes.sql  005_drop_client_pin.sql  006_collapse_feature_sets.sql  007_concrete_binding.sql  008_canonical_default_space.sql  009_restore_client_grants.sql  010_inbound_client_reports_roots.sql  011_inbound_client_roots_capability_known.sql  012_workspace_binding_feature_sets.sql  013_rename_default_to_starter.sql  014_rewrite_starter_seed_copy.sql  015_rewrite_starter_seed_copy_v2.sql  016_space_builtin_servers.sql  017_purge_orphaned_feature_set_members.sql  018_starter_is_default_fallback_copy.sql  019_space_base_dirs.sql  020_inbound_client_api_keys.sql  020_workspace_binding_label.sql  021_binding_type.sql  021_installed_server_cloned_from.sql  022_inbound_client_locked_space.sql  022_installed_server_display_name_override.sql  023_feature_set_member_surfaced.sql  024_workspace_icons.sql  025_tool_embeddings.sql  026_installed_server_default_params.sql  027_workspace_binding_client_scope.sql  028_server_update_policy.sql  029_server_version_cache.sql  030_default_params_strategy.sql  031_server_current_version.sql  032_workspace_icon_backfill.sql  033_machines.sql  034_workspace_binding_machine_scope.sql  (+8 more)
crates/mcpmux-storage/src/repositories/: app_settings_repository.rs  credential_repository.rs  embedding_repository.rs  feature_set_repository.rs  inbound_client_repository.rs  inbound_mcp_client_repository.rs  installed_server_repository.rs  machine_repository.rs  mod.rs  outbound_oauth_client_repository.rs  server_feature_repository.rs  space_base_dir_repository.rs  space_builtin_config_repository.rs  space_repository.rs  workspace_appearance_repository.rs  workspace_binding_repository.rs
tests/rust/: Cargo.toml
tests/rust/src/: lib.rs  mocks.rs  services.rs
tests/rust/tests/application/: client_app_service.rs  mod.rs  permission_app_service.rs  server_app_service.rs  space_app_service.rs
tests/rust/tests/database/: feature_set.rs  inbound_client.rs  installed_server.rs  migrations.rs  mod.rs  outbound_oauth.rs  repositories.rs  space_base_dir.rs
tests/rust/tests/gateway/: authorization.rs  mod.rs  server_manager.rs  (+2 more)
(+518 files in other folders)
