[package]
name = "mcpmux-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "MCP protocol implementation and client management"

[dependencies]
mcpmux-core.workspace = true
rmcp.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
reqwest.workspace = true
hex.workspace = true
ring.workspace = true
shell-words = "1.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

