[package]
name = "mcpmux-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "mcpmux"
path = "src/main.rs"

[dependencies]
mcpmux-core = { path = "../mcpmux-core" }
mcpmux-gateway = { path = "../mcpmux-gateway" }
mcpmux-storage = { path = "../mcpmux-storage" }

tokio.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
tracing.workspace = true
tracing-subscriber.workspace = true
