[package]
name = "mcpmux-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "mcpmux"
path = "src/main.rs"

[features]
# Off by default so `cargo build --workspace` never requires a prebuilt
# frontend. Enable to embed the desktop React UI (needs apps/desktop/dist,
# produced by `pnpm build:web`): `cargo build -p mcpmux-serve --features embed-ui`.
default = []
embed-ui = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
mcpmux-core = { path = "../mcpmux-core" }
mcpmux-gateway = { path = "../mcpmux-gateway" }
mcpmux-storage = { path = "../mcpmux-storage" }

tokio.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true }
axum = { workspace = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
