[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false
description = "Integration tests for McpMux"

[dependencies]
# Internal crates
mcpmux-core = { path = "../../crates/mcpmux-core" }
mcpmux-gateway = { path = "../../crates/mcpmux-gateway" }
mcpmux-storage = { path = "../../crates/mcpmux-storage" }
mcpmux-mcp = { path = "../../crates/mcpmux-mcp" }

# Async runtime
tokio = { version = "1.42", features = ["full", "test-util", "macros"] }
async-trait = "0.1"
futures = "0.3"

# Test utilities
tempfile = "3.14"
pretty_assertions = "1"

# Serialization (for test fixtures)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for test data
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding for crypto tests
hex = "0.4"

[lib]
path = "src/lib.rs"

[[test]]
name = "database"
path = "tests/database/mod.rs"

[[test]]
name = "security"
path = "tests/security/mod.rs"

# Gateway and OAuth tests will be added later when infrastructure is ready
# [[test]]
# name = "gateway"
# path = "tests/gateway/mod.rs"
#
# [[test]]
# name = "oauth"
# path = "tests/oauth/mod.rs"
