[package]
name = "tests"
version = "0.0.2"
edition = "2021"
publish = false
description = "Integration tests for McpMux"

[dependencies]
# Internal crates
mcpmux-core = { path = "../../crates/mcpmux-core" }
mcpmux-gateway = { path = "../../crates/mcpmux-gateway" }
mcpmux-storage = { path = "../../crates/mcpmux-storage" }
mcpmux-mcp = { path = "../../crates/mcpmux-mcp" }

# Async runtime
tokio = { version = "1.42", features = ["full", "test-util", "macros"] }
async-trait = "0.1"
futures = "0.3"

# Test utilities
tempfile = "3.14"
pretty_assertions = "1"

# Serialization (for test fixtures)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for test data
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding for crypto tests
hex = "0.4"

# Dashmap for concurrent collections
dashmap = "6.1"

# Tracing for test output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP mocking for OAuth tests
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }

# URL parsing for OAuth tests
url = "2.5"

# Sync primitives for tests
parking_lot = "0.12"

# Pipe creation for stderr capture tests
os_pipe = { workspace = true }

[lib]
path = "src/lib.rs"

[[test]]
name = "database"
path = "tests/database/mod.rs"

[[test]]
name = "security"
path = "tests/security/mod.rs"

[[test]]
name = "gateway"
path = "tests/gateway/mod.rs"

[[test]]
name = "oauth"
path = "tests/oauth/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
