[package]
name = "mcpmux"
version = "0.0.14"
edition.workspace = true
publish = false
description = "McpMux - Centralized MCP Server Management"
authors = ["McpMux Team"]

[lib]
name = "mcpmux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json.workspace = true

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
uuid.workspace = true
async-trait.workspace = true
dirs.workspace = true
keyring.workspace = true
zeroize.workspace = true
chrono.workspace = true
reqwest.workspace = true
url.workspace = true
urlencoding = "2.1"
open = "5.3"
dotenvy.workspace = true
notify = { version = "7", default-features = false, features = [
    "macos_fsevent",
] }
notify-debouncer-mini = "0.5"

# Internal crates (path-only, no version needed)
mcpmux-core.workspace = true
mcpmux-gateway.workspace = true
mcpmux-storage.workspace = true
